--- a/index.html
+++ b/index.html
@@ -21,9 +21,86 @@
         </div>
     </header>
     <main>
+        <section class="failure-section">
+            <div class="uni-margin">
+                <img src="images/person.png" alt="">
+            </div>
+            <div class="failure-info">
+                <h3 class="section-title">My failures of previous year</h3>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                    classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <div class="list">
+                    <p class="check-list"> <span
+                            style="font-family: wingdings; font-size: 100%; color: #16D887;">&#252;</span>
+                        Contrary to popular belief, is not simply.</p>
+                    <p class="check-list"> <span
+                            style="font-family: wingdings; font-size: 100%; color: #16D887;">&#252;</span>
+                        Contrary to popular belief, is not simply.</p>
+                    <p class="check-list"> <span
+                            style="font-family: wingdings; font-size: 100%; color: #16D887;">&#252;</span>
+                        Contrary to popular belief, is not simply.</p>
+                    <p class="check-list"> <span
+                            style="font-family: wingdings; font-size: 100%; color: #16D887;">&#252;</span>
+                        Contrary to popular belief, is not simply.</p>
+                    <p class="check-list"> <span
+                            style="font-family: wingdings; font-size: 100%; color: #16D887;">&#252;</span>
+                        Contrary to popular belief, is not simply.</p>
+                </div>
 
+            </div>
+        </section>
+        <section class="plan-section">
+            <h3 class="section-title">My Plans</h3>
+            <div class="plans">
+                <div>
+                    <img src="images/icons/web.png" alt="">
+                    <h4>Web Development</h4>
+                    <p>I want to learn</p>
+                </div>
+                <div>
+                    <img src="images/icons/js.png" alt="">
+                    <h4>Javascript</h4>
+                    <p>I want to learn</p>
+                </div>
+                <div>
+                    <img src="images/icons/smoke.png" alt="">
+                    <h4>Smoking Habit</h4>
+                    <p>I want to end</p>
+                </div>
+                <div>
+                    <img src="images/icons/ecom.png" alt="">
+                    <h4>Web Development</h4>
+                    <p>I want to develop</p>
+                </div>
+            </div>
+        </section>
+        <section class="bottom-banner">
+            <div class="bottom-banner-info">
+                <h3 class="section-title">Always keep a positive mindset</h3>
+                <button class="primary-btn">Call Now</button>
+            </div>
+        </section>
     </main>
     <footer>
+        <div class="future-section">
+            <h3 class="section-title">Future</h3>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+                in some form, by injected humour, or randomised words</p>
+            <p>Email : emhsami@gmail.com</p>
+            <p>Phone : +88018 2889 5958</p>
+            <div>
+                <img src="images/icons/fb.png" alt="">
+                <img src="images/icons/twitter.png" alt="">
+                <img src="images/icons/youtube.png" alt="">
+            </div>
+        </div>
+        <div class="subs-section">
+            <h3 class="section-title">Subscribe</h3>
+            <input placeholder="Enter Your Email" type="text">
+            <div>
+                <button class="primary-btn">Subscribe</button>
+            </div>
+        </div>
 
     </footer>
 </body>
